cron: automated etherpad backup

--- a/pads/ovc11-webm-testing-metrics-and-new-features.html
+++ b/pads/ovc11-webm-testing-metrics-and-new-features.html
@@ -6,5 +6,9 @@
 <title>/ovc11-webm-testing-metrics-and-new-features</title>
 </head>
 <body><br
+/>Welcome to EtherPad!<br
+/><br
+/>This&nbsp; pad text is synchronized as you type, so that everyone viewing this&nbsp; page sees the same text.&nbsp; This allows you to collaborate seamlessly on&nbsp; documents!<br
+/><br
 /></body>
 </html>
