cron: automated etherpad backup

--- a/pads/ovc11-alternative-currencies.html
+++ b/pads/ovc11-alternative-currencies.html
@@ -5,10 +5,8 @@
 <meta http-equiv="Content-Language" content="en-us" />
 <title>/ovc11-alternative-currencies</title>
 </head>
-<body><br
-/>Welcome to EtherPad!<br
+<body>Some Interesting articles to look into:&nbsp;<br
 /><br
-/>This pad text is synchronized as you type, so that everyone viewing this page sees the same text.&nbsp; This allows you to collaborate seamlessly on documents!<br
 /><br
 /></body>
 </html>
