--- a/pads/ovc11-oer-video.html
+++ b/pads/ovc11-oer-video.html
@@ -10,16 +10,23 @@
 />Session Type: Working Group (Invite-Only)<br
 />Time: 1:30-4:30, Saturday and Sunday<br
 /><br
+/>pre-session planning document: <a href="http://openetherpad.org/videooer">http://openetherpad.org/videooer</a><br
+/><br
 /><u>Goals</u><br
 /><ul><li>Build relationships between key players in the open education community working with or interested in using video</li
 ><li>Identify challenges and gaps in the open education landscape with regard to video</li
 ><li>Identify potential opportunities and collaborations</li
 ><li>Identify principles, values and standards for this field</li
 ><li>Share experiences and brainstorm innovative strategies</li
-><li>Cross pollinate ideas between different areas within this community, such as higher education, public media, secondary education, youth empowerment, online learning and digital literacy<br/><br
+><li>Cross pollinate ideas between different areas within this community, such as higher education, public media, secondary education, youth empowerment, online learning and digital literacy</li
+><li>Achieve consensus on one or two technical/design challenges/gaps in the field that are the most pressing, to be addressed at the Mozilla Drumbeat Festival in November<br/><br
 /><br/><br
 /></li></ul
-><u>Resources and Links</u><br
+><u>Big Ideas/ Planned Collaborations</u><br
+/><br
+/><u>Principles/Standards</u><br
+/><br
+/><u>Resources and Links</u><br
 /><br
 /><u>Projects and Platforms</u><br
 /><br
@@ -35,19 +42,20 @@
 /><ul><li>Stanford E-Corner <a href="http://ecorner.stanford.edu/">http://ecorner.stanford.edu/</a></li
 ><li>New Media UFM <a href="http://newmedia.ufm.edu/">http://newmedia.ufm.edu/</a><br/><br
 /></li></ul
-><i>Online Educational Video Projects</i><br
+><i>Online Educational Video Projects (or projects making prominent use of video)</i><br
 /><ul><li>Khan Academy <a href="http://www.khanacademy.org/">http://www.khanacademy.org/</a></li
 ><li>YouTube Education <a href="http://www.youtube.com/education">http://www.youtube.com/education</a></li
 ><li>iTunes U <a href="http://www.apple.com/education/itunes-u/whats-on.html">http://www.apple.com/education/itunes-u/whats-on.html</a></li
 ><li>TED <a href="http://www.ted.com/">http://www.ted.com/</a></li
 ><li>Wikimedia: <a href="http://commons.wikimedia.org/wiki/Category:Videos">http://commons.wikimedia.org/wiki/Category:Videos</a> and <a href="http://www.wikiversity.org/">http://www.wikiversity.org/</a></li
-><li>Big Think <a href="http://bigthink.com/">http://bigthink.com/</a><br/><br
+><li>Big Think <a href="http://bigthink.com/">http://bigthink.com/</a></li
+><li>Academic Earth <a href="http://academicearth.org/">http://academicearth.org/</a></li
+><li>Sookmyung Network for an Open World <a href="http://www.snow.or.kr/">http://www.snow.or.kr/</a></li
+><li>Udemy <a href="http://www.udemy.com/">http://www.udemy.com/</a><br/><br
+/><br/><br
+/><br/><br
 /></li></ul
-><u>Big Ideas/ Planned Collaborations</u><br
-/><br
-/><u>Principles/Standards</u><br
-/><br
-/>(the organization of this session is inspired by Aspiration Tech's Facilitation Model - <a href="http://facilitation.aspirationtech.org/index.php?title=Main_Page)">http://facilitation.aspirationtech.org/index.php?title=Main_Page)</a><br
+>(the organization of this session is inspired by Aspiration Tech's Facilitation Model - <a href="http://facilitation.aspirationtech.org/index.php?title=Main_Page)">http://facilitation.aspirationtech.org/index.php?title=Main_Page)</a><br
 /><br
 /></body>
 </html>
