--- a/pads/ovc11-roll-your-own-video-cms.html
+++ b/pads/ovc11-roll-your-own-video-cms.html
@@ -6,9 +6,9 @@
 <title>/ovc11-roll-your-own-video-cms</title>
 </head>
 <body><br
-/>Welcome to EtherPad!<br
+/>Roll Your Own Video CMS<br
 /><br
-/>This pad text is synchronized as you type, so that everyone viewing this page sees the same text.&nbsp; This allows you to collaborate seamlessly on documents!<br
+/>Looking forward to this!<br
 /><br
 /></body>
 </html>
