--- a/pads/ovc2011.html
+++ b/pads/ovc2011.html
@@ -42,7 +42,7 @@
 />Saturday 10:30—12:00 <b>{UNCLAIMED}</b><br
 />Saturday 12:00—1:30 <b>{UNCLAIMED}</b><br
 />Saturday 2:30—4:00 <b>{UNCLAIMED}</b><br
-/>Saturday 4:00—5:30 <b>zixan</b><br
+/>Saturday 4:00—5:30 <b>zixan (please add session name + short phrase description)</b><br
 /><br
 />▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄▀▄<br
 /><br
